--- a/conf/application.conf
+++ b/conf/application.conf
@@ -212,3 +212,5 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+module.crud=${play.path}/modules/crud
+module.secure=${play.path}/modules/secure
